Fixup after merge with development